2006-07-31  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.16

2006-07-31  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "If the Applications switcher menu is already, the menu is
	closed after short press home (sawp) hey." (Closes NB#36263)
	* hildon-navigator/hn-app-switcher.c: Pop-down the AS menu on a second
	  short press on HOME

2006-07-28  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-button.h: thumb button is 8, not 4

2006-07-28  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Couldn't type 'apostrophe' where 'adiaeresis' assigned as
	shortcut." (Closes NB#35553)
	* hildon-navogator/hn-keys.[ch]:
	  - Keep a pointer to the KeyCode, in case the KeySyms changed when
	    removing a shortcut
	  - Added callback to reload all the key bindings
	* hildon-navogator/hn-wm.c: Track changes in the keymap, and reload
	  the key shortcuts when detected.

2006-07-28  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.h: Changed path for
	  status bar HildonLog
	* hildon-status-bar/hildon-status-bar-main.c: Deletion of HildonLog
	  file unconditionally

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Fixed a few double-free when reading
	  bogus background desktop file (Closes NB#35494)

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Handle empty names for backgrounds
	  gracefully (Closes NB#35454)

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed the leak of the thumb icon
	  pixbuf (Closes NB#34662)
	* hildon-navigator/others-menu.c: Fixed the leak of the others-menu
	  icon pixbuf
	* hildon-navigator/hn-app-switcher.c: Fixed the leak of the AS menu
	  icon pixbuf
	* hildon-status-bar/hildon-status-bar-main.c: Fixed the leak of a string

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: brought back "toggle" handler, but